Add GitHub link to homepage.

--- a/src/index-template.jade
+++ b/src/index-template.jade
@@ -34,4 +34,4 @@ html(lang="en")
 					.pub= article.pub
 					.date= article.date
 				iframe.instapaper(src="http://www.instapaper.com/e2?url=" + encodeURIComponent(article.url) + "&title=" + encodeURIComponent(article.hed) + "&description=" + encodeURIComponent(article.dek), scrolling="no", frameborder=0, allowtransparency="true")
-		.about A punoriginal project by <a href="http://www.jsvine.com">Jeremy Singer-Vine</a>. Tweet suggestions / complaints / insults at <a href="http://www.twitter.com/jsvine">@jsvine</a>.
+		.about A punoriginal project by <a href="http://www.jsvine.com">Jeremy Singer-Vine</a>. Tweet suggestions / complaints / insults at <a href="http://www.twitter.com/jsvine">@jsvine</a>. <a href="https://github.com/jsvine/linstapaper">Open-sourced on GitHub</a>.
